Fix quote embed
Not sure why the JDK version I was using thought getFirst() was a thing